# diplomarbeit-backend

./: .env  .gitignore  Dockerfile  app.py  compose.yaml  pyproject.toml  test.db  webapp.env
database/: init.py  test.db
image_classification/: ImageClassifierDataset.py  ImageClassifierModel.py  __init__.py  modelTools.py
models/: device_model.py  fill_level_model.py  image_model.py  prediction_model.py
services/: device_service.py  fill_level_service.py  image_service.py  prediction_service.py
